Homepage HTML completed

--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
         </li>
       </ul>
     </section>
+
+    <!-- Last CTA Sign Up -->
+    <section class="last sign up">
+      <div class="container">
+        <h2>Join Blocbox today!</h2>
+        <p>Begin sharing, saving and collaborating.</p>
+        <a href="signup.html" class="btn">Start Your Free Trial!</a>
+      </div>
+    </section>
   </main>
 
   <!-- Footer -->
