--- a/index.html
+++ b/index.html
@@ -42,14 +42,17 @@
     <section class="benefits">
       <ul class="container">
         <li class="one-third">
+          <i class="fa fa-file-o" aria-hidden="true"></i>
           <h2>Create notes</h2>
           <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
         </li>
         <li class="one-third">
+          <i class="fa fa-picture-o" aria-hidden="true"></i>
           <h2>Save images</h2>
           <p>Are there images you find interesting enough to save? Now you have a way to organize and store these within blocbox.</p>
         </li>
         <li class="one-third">
+          <i class="fa fa-link" aria-hidden="true"></i>
           <h2>Add links</h2>
           <p>Forget bookmarking sites in your browser. With blocbox, you can add links, group them and view them from any computer.</p>
         </li>
@@ -102,6 +105,9 @@
           </div>
         </li>
       </ul>
+      <div class="container">
+        <p class="small">*We will not collect your credit card information until your 30-day trial has ended.</p>
+      </div>
     </section>
 
     <!--Testimonials -->
@@ -112,22 +118,22 @@
       </div>
       <ul class="container">
         <li class="one-fourth">
-          <blocquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blocquote>
+          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="names"><strong>Jon Snow</strong><br/>Freelance Designer, N. Dakota</p>
         </li>
         <li class="one-fourth">
-          <blocquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blocquote>
+          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="names"><strong>Jon Snow</strong><br/>Freelance Designer, N. Dakota</p>
         </li>
         <li class="one-fourth">
-          <blocquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blocquote>
+          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="names"><strong>Jon Snow</strong><br/>Freelance Designer, N. Dakota</p>
         </li>
         <li class="one-fourth">
-          <blocquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blocquote>
+          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="names"><strong>Jon Snow</strong><br/>Freelance Designer, N. Dakota</p>
         </li>
