--- a/dashboard.html
+++ b/dashboard.html
@@ -37,7 +37,7 @@
     </div>
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
-      <p>Joey Kirk</p>
+      <p>Jon Snow</p>
       <a href="#"><i class="fa fa-cog"></i></a>
     </div>
   </nav>
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="content-item">
           <div class="item-box">
-            <img src="https://images.pexels.com/photos/3540/restaurant-alcohol-bar-drinks.jpg?h=350&auto=compress&cs=tinysrgb"
+            <img src="https://images.pexels.com/photos/3540/restaurant-alcohol-bar-drinks.jpg?h=350&auto=compress&cs=tinysrgb">
           </div>
         </div>
       <div class="content-item">
