--- a/images.html
+++ b/images.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
 
-  <title>Dashboard | Blocbox</title>
+  <title>Images | Blocbox</title>
 
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Varela+Round' rel='stylesheet' type='text/css'>
@@ -68,7 +68,7 @@
         </div>
         <div class="content-item">
           <div class="item-box">
-            <img src="https://images.pexels.com/photos/6224/hands-people-woman-working.jpg?h=350&auto=compress&cs=tinysrgb">
+            <img src="https://images.pexels.com/photos/450597/pexels-photo-450597.jpeg?h=350&auto=compress&cs=tinysrgb">
           </div>
         </div>
       </div>
