--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,16 @@
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
       <p>Jon Snow</p>
-      <a href="#"><i class="fa fa-cog"></i></a>
+      <ul class="setmenu">
+            <li>
+              <a href="#"><i class="fa fa-cog"></i></a>
+              <ul>
+                  <li><a href="#"><i class="fa fa-cog"></i> Account Settings</a></li>
+                  <li><a href="#"><i class="fa fa-group"></i> Collaborators</a></li>
+                  <li><a href="#"><i class="fa fa-sign-out"></i>Sign out</a></li>
+              </ul>
+            </li>
+      </ul>
     </div>
   </nav>
   <main role="main">
@@ -127,6 +136,7 @@
   <script src="js/dropit.js"></script>
   <script type="text/javascript">
   $(".menu").dropit();
+  $(".setmenu").dropit();
   $( "#menu" ).click(function(){
     $("#left-nav").toggleClass("open", 200);
   });
